fix image overflow

--- a/app/static/css/dish_page.css
+++ b/app/static/css/dish_page.css
@@ -3,4 +3,25 @@
     height: auto;
     max-width: 500px;
     border-radius: 15px;
+    margin: 10px;
+}
+
+#backToMenu {
+    padding: 20px;
+}
+
+@media (max-width: 576px) {
+    .content {
+        margin: 0 !important;
+        border-radius: 0 !important;
+    }
+
+    #backToMenu {
+        position: relative;
+        margin: 0;
+    }
+
+    .square-image {
+        max-width: 95%;
+    }
 }
